force-app/main/default/objects/Convsta_Competence__c/Convsta_Competence__c.object-meta.xml
<CustomObject>
    <description>Une compétence qui a un master-details sur une Convsta_Evaluation__c</description>
    <label>Competence</label>
    <nameField>
        <label>Nom de Competence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>