force-app/main/default/objects/Convsta_Competence__c/fields/Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Evaluation__c</fullName>
    <label>Evaluation</label>
    <referenceTo>Convsta_Evaluation__c</referenceTo>
    <relationshipLabel>Competences</relationshipLabel>
    <relationshipName>Competences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>