force-app/main/default/objects/Convsta_Competence__c/fields/Famille_metiers__c.field-meta.xml
<CustomField>
    <fullName>Famille_metiers__c</fullName>
    <label>Famille métiers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>