force-app/main/default/objects/Convsta_Competence__c/fields/Label_En__c.field-meta.xml
<CustomField>
    <fullName>Label_En__c</fullName>
    <label>Label_En</label>
    <length>255</length>
    <type>Text</type>
</CustomField>