force-app/main/default/objects/Convsta_Competence__c/fields/Label_fr__c.field-meta.xml
<CustomField>
    <fullName>Label_fr__c</fullName>
    <label>Label_fr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>