force-app/main/default/objects/Convsta_Competence__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Ordre d&apos;apparition sur la page d&apos;évaluation de stage de la Communauté</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>