force-app/main/default/objects/Convsta_Competence__c/fields/Rating_displayed__c.field-meta.xml
<CustomField>
    <fullName>Rating_displayed__c</fullName>
    <formula>IF(ISNUMBER(TEXT(rating__c)),
			TEXT(rating__c) &amp; &quot;/5&quot;,
			&quot;NA&quot;
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating displayed</label>
    <type>Text</type>
</CustomField>