force-app/main/default/objects/Convsta_Competence__c/fields/ratingValue__c.field-meta.xml
<CustomField>
    <fullName>ratingValue__c</fullName>
    <description>Retourne la valeur de la note  (null si n/a)</description>
    <formula>VALUE( Text( rating__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ratingValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>