force-app/main/default/objects/Convsta_Competence__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2Comportement</fullName>
                <label>Comportement</label>
            </value>
            <value>
                <fullName>1EarlyMaker</fullName>
                <label>EarlyMaker</label>
            </value>
            <value>
                <fullName>3Métier</fullName>
                <label>Métier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>